--- a/_posts/2018-07-09-rbm.md
+++ b/_posts/2018-07-09-rbm.md
@@ -1,4 +1,8 @@
-# RBM
+---
+layout: post
+title: Restricted Boltzmann Machine (RBM) for Physicsts
+---
+# Restricted Boltzmann Machine (RBM) for Physicsts
 
 Give a pdf $\pi(x)$, $x$ is an input vector (or image), it can be
 
