--- a/_posts/2018-07-09-realnvp.md
+++ b/_posts/2018-07-09-realnvp.md
@@ -1,43 +1,52 @@
-# Normalizing Flow - RealNVP
+---
+layout: post
+title: RealNVP for Physicists
+---
+# RealNVP for physicists
+To understand RealNVP, its proper to start from normalizing flow
 
-Bijector $z=f(x)$
+[https://blog.evjang.com/2018/01/nf1.html](https://blog.evjang.com/2018/01/nf1.html)
 
-### Inference 
+Suppose we have a Bijector $z=f(x)$
+
+#### Inference 
 
 $x\sim \hat p_X$
 
 $z=f(x)$
 
-### Generation
+#### Generation
 
 $z\sim p_Z$
 
  $x=f^{-1}(z)$
 
-### Tractable density
+## Tractable density
 
 The change of probability
 
-$p_X(x) = p_Z(f(x))\left|\det \left(\frac{\partial f(x)}{\partial x^T}\right)\right|$
-$\log p_X(x) = \log\left(p_Z\left(f(x)\right)\right) + \log\left(\left|\det \left(\frac{\partial f(x)}{\partial x^T}\right)\right|\right)$
+$p_X(x) = p_Z(f(x))\left\vert\det \left(\frac{\partial f(x)}{\partial x^T}\right)\right\vert$
+$\log p_X(x) = \log\left(p_Z\left(f(x)\right)\right) + \log\left(\left\vert\det \left(\frac{\partial f(x)}{\partial x^T}\right)\right\vert\right)$
 
 
 
 #### The detailed derivation
+Let $(a, b) = x$ and $(u, v) = z$
 
 Contributed by Shuo-Hui Li
+
 $$
-\iint\limits_{u,v}{P_{\rm hidden}(u,v)}\mathrm{d}{A_{\rm hidden}} = \iint\limits_{x,y}P(x,y)\mathrm{d}{A}
+\iint\limits_{u,v}{p_Z(u,v)}\mathrm{d}{A_Z} = \iint\limits_{a,b}p_X(a,b)\mathrm{d}{A}
 $$
 
 $$
 \begin{split}
-\mathrm{d}{A} &= \mathrm{d}{x}\mathrm{d}{y} \\
-&= \left( \frac{\partial{x}}{\partial{u}}\frac{\partial{y}}{\partial{v}}-\frac{\partial{x}}{\partial{v}}\frac{\partial{y}}{\partial{u}}\right) \mathrm{d}{u}\mathrm{d}{v}\\
-&=\det{\left|\begin{matrix}
-\frac{\partial{x}}{\partial{u}} & \frac{\partial{x}}{\partial{v}}\\
-\frac{\partial{y}}{\partial{u}} & \frac{\partial{y}}{\partial{v}}
-\end{matrix}\right|} \mathrm{d}{u}\mathrm{d}{v} \\
+\mathrm{d}{A} &= \mathrm{d}{a}\mathrm{d}{b} \\
+&= \left( \frac{\partial{a}}{\partial{u}}\frac{\partial{b}}{\partial{v}}-\frac{\partial{a}}{\partial{v}}\frac{\partial{b}}{\partial{u}}\right) \mathrm{d}{u}\mathrm{d}{v}\\
+&=\det{\left\vert\begin{matrix}
+\frac{\partial{a}}{\partial{u}} & \frac{\partial{a}}{\partial{v}}\\
+\frac{\partial{b}}{\partial{u}} & \frac{\partial{b}}{\partial{v}}
+\end{matrix}\right\vert} \mathrm{d}{u}\mathrm{d}{v} \\
 \end{split}
 $$
 
@@ -45,20 +54,20 @@ Here, the matrix inside the determinant is the Jacobian,
 which can be extended to higher dimensions.
 
 $$
-\iint\limits_{u,v}{P_{\rm hidden}(u,v)}\mathrm{d}{A_{\rm hidden}} = \iint\limits_{x,y}P(x,y)\det{\left|\rm Jacobian \right|} \mathrm{d}{u}\mathrm{d}{v}
+\iint\limits_{u,v}{p_Z(u,v)}\mathrm{d}{A_Z} = \iint\limits_{a,b}p_X(a,b)\det{\left\vert\rm Jacobian \right\vert} \mathrm{d}{u}\mathrm{d}{v}
 $$
 
 $$
-P_{\rm hidden}(u,v) = P(x,y)\det{\left|\rm Jacobian \right|}
+p_Z(u,v) = p_X(a,b)\det{\left\vert\rm Jacobian \right\vert}
 $$
 
 $$
 \begin{equation}
-H:(u,v)\rarr (x,y) \\
+H:(u,v)\rightarrow (a,b) \\
 \left\{
 \begin{array}{rl}
-x &= m^0(u,v)u+m^1(u,v)\\
-y &=m^2(u,v)v+m^3(u,v)\\
+a &= m^0(u,v)u+m^1(u,v)\\
+b &=m^2(u,v)v+m^3(u,v)\\
 \end{array}
 \right.
 \end{equation}
