--- a/_posts/2018-07-09-rbm.md
+++ b/_posts/2018-07-09-rbm.md
@@ -54,7 +54,7 @@ $$E(x) = x^T\mathbf Wh + b^Th +x^Ta$$
 
 
 
-conditional sampling $p(x|h)\propto e^{-x^T(\mathbf Wh+a)}=\prod\limits_ie^{-x_i\Theta_i}$, where $\Theta_i$ is the ith element of $\mathbf Wh+a$, so that we can do pixel-wise sampling according to probability $p(x_i)\propto \frac{e^{-x_i\Theta_i}}{1+e^{-\Theta_i}}$  (i.e. $p(x_i=0)=\sigma(\Theta_i)$)
+conditional sampling $p(x\vert h)\propto e^{-x^T(\mathbf Wh+a)}=\prod\limits_ie^{-x_i\Theta_i}$, where $\Theta_i$ is the ith element of $\mathbf Wh+a$, so that we can do pixel-wise sampling according to probability $p(x_i)\propto \frac{e^{-x_i\Theta_i}}{1+e^{-\Theta_i}}$  (i.e. $p(x_i=0)=\sigma(\Theta_i)$)
 
 **How can this be useful?**
 
@@ -62,7 +62,7 @@ Inference!
 
 given part of $x$, e.g. half of an image, part of dataset, guess rest data.
 
-$p(x_{B}|x_{A}) = \sum\limits_hp(x_{B}|h)p(h|x_{A})$
+$p(x_{B}\vert x_{A}) = \sum\limits_hp(x_{B}\vert h)p(h\vert x_{A})$
 
 useful in recommender systems.
 
@@ -70,11 +70,11 @@ useful in recommender systems.
 
 conditional sampling $x_1\rightarrow h_1\rightarrow x_2 \rightarrow \ldots\rightarrow x_n$, will converge to $p(x)$ and $p(h)$.
 
-1). $\frac{p(x_{t}|x_{t-1})}{p(x_{t-1}|x_t)}=\frac{p(x_t)}{p(x_{t-1})}$
+1). $\frac{p(x_{t}\vert x_{t-1})}{p(x_{t-1}\vert x_t)}=\frac{p(x_t)}{p(x_{t-1})}$
 
-$p(x_t|x_{t-1}) =\sum\limits_{h} p(x_t|h)p(h|x_{t-1})=\sum\limits_h\frac{p(x_t, h)p(h, x_{t-1})}{p(h)p(x_{t-1})}$
+$p(x_t\vert x_{t-1}) =\sum\limits_{h} p(x_t\vert h)p(h\vert x_{t-1})=\sum\limits_h\frac{p(x_t, h)p(h, x_{t-1})}{p(h)p(x_{t-1})}$
 
-$p(x_{t-1}|x_{t}) =\sum\limits_{h} p(x_{t-1}|h)p(h|x_{t})=\sum\limits_h\frac{p(x_{t-1}, h)p(h, x_t)}{p(h)p(x_t)}$
+$p(x_{t-1}\vert x_{t}) =\sum\limits_{h} p(x_{t-1}\vert h)p(h\vert x_{t})=\sum\limits_h\frac{p(x_{t-1}, h)p(h, x_t)}{p(h)p(x_t)}$
 
 Statistic ensemble $\rightarrow$ Time ensemble
 
