--- a/_posts/2018-07-09-realnvp.md
+++ b/_posts/2018-07-09-realnvp.md
@@ -21,6 +21,17 @@ $z\sim p_Z$
 
  $x=f^{-1}(z)$
 
+## Example: Box-Muller Algorithm
+$z\sim$ uniform random variable
+
+$$
+\begin{cases}
+x_1 = \sqrt{-2\ln z_1} \cos(2\pi z_2),
+x_2 = \sqrt{-2\ln z_1} \sin(2\pi z_2).
+\end{cases}
+$$
+
+
 ## Tractable density
 
 The change of probability
