--- a/_posts/2018-07-09-rbm.md
+++ b/_posts/2018-07-09-rbm.md
@@ -4,39 +4,45 @@ title: Restricted Boltzmann Machine (RBM) for Physicsts
 ---
 # Restricted Boltzmann Machine (RBM) for Physicsts
 
-Give a pdf $\pi(x)$, $x$ is an input vector (or image), it can be
+## Data: Motivation
 
-* distribution of an image dataset in its Hilbert space.
-* monte carlo sampling distribution
-* measurement results of a quantum circuit
+Given an i.i.d dataset $\mathcal D$ that drawn from a target probability distribution $\pi(x)$, with $x$ an input vector (or image).
 
-## What is Boltzmann Machine?
+We want to learn a model $p_\theta(x)\sim \pi(x)$.
 
-Define an energy based model
+Here $\mathcal D$ can be
 
-$p(x)=\frac{e^{-E(x)}}{Z}$, where $E(x)$ is described by a graph, $Z=\sum\limits_xe^{-E(x)}$ and $x=0,1$.
+* an image dataset,
+* monte carlo samples,
+* measurement results of a quantum circuit.
+
+## Model: What is a Boltzmann Machine?
+
+An energy based model to describe probability distribution
+
+$p_\theta(x)=\frac{e^{-E_\theta(x)}}{Z_\theta}$, where $E_\theta(x)$ is described by a graph, $Z_\theta=\sum\limits_xe^{-E_\theta(x)}$is the partition function, $x$ is a vector consists of $x_i=0,1$, $\theta$ is the network parameters.
+
+Typically, we can construct a Boltzmann Machine with the energy defined as
 
 $E(x) = -\frac 1 2x_iW_{ij}x_j$
 
 [picture of boltzmann machine, as an example]![bmrbm](Figures/Handson/bmrbm.png)
 
-This is Boltzmann machine!
+Here $W$ matrix is the $\theta$ parameters in the above formulation. It resembles the famous **Ising** model. 
 
-## What is the motivation of Boltzmann Machine?
+## Loss: The criteria for optimization
 
-we want $p(x)\sim\pi(x)$, Given i.i.d. data $y\sim\pi(x)$.
+We want to maximize the likehood
 
-Quantify our target to Loss!
+$$l = \prod\limits_yp(y)$$,
 
-$L = -\prod\limits_yp(y)$, we want to maximize this, equivalently minimize 
+or equivalently minimize the negative log likelihood(NLL) loss
 
 $$\begin{align}\mathcal{L}=\frac L N = \frac 1 N \sum\limits_y E(y) +\log Z\end{align}$$
 
-This is the famous NLL loss!
+## Training: How to minimize the NLL loss?
 
-## How to minimize the loss?
-
-Partition function $Z$ is notoriously hard to obtain, it is one of the essential problem in statistic physics.
+Partition function $Z$ is notoriously hard to obtain, it is one of the fundamental problem in statistic physics.
 
 Interestingly, $\frac{\partial \mathcal L}{\partial \theta}$ can be estimated!
 
@@ -44,7 +50,11 @@ $$\begin{align}\frac{\partial L}{\partial\theta} &= \mathbb E_{y\in \mathcal D}[
 
 However, classical spin statistics are not simple enough, the second term is still hard.
 
-### A simplified model RBM suited for inference
+### A energy based model suited for inference
+
+Inference means Given part of $x$, guess the rest, it is based on conditional probability $p(x_{B}\vert x_{A}) = \sum\limits_hp(x_{B}\vert h)p(h\vert x_{A})$, which is useful in recommender systems.
+
+However, a general energy based model is hard to make **inference**(or conditional probability), so we need a **Restricted Boltzmann Machine**
 
 $$E(x) = x^T\mathbf Wh + b^Th +x^Ta$$
 
@@ -54,17 +64,9 @@ $$E(x) = x^T\mathbf Wh + b^Th +x^Ta$$
 
 
 
-conditional sampling $p(x\vert h)\propto e^{-x^T(\mathbf Wh+a)}=\prod\limits_ie^{-x_i\Theta_i}$, where $\Theta_i$ is the ith element of $\mathbf Wh+a$, so that we can do pixel-wise sampling according to probability $p(x_i)\propto \frac{e^{-x_i\Theta_i}}{1+e^{-\Theta_i}}$  (i.e. $p(x_i=0)=\sigma(\Theta_i)$)
+conditional probability $p(x\vert h)\propto e^{-x^T(\mathbf Wh+a)}=\prod\limits_ie^{-x_i\Theta_i}$, where $\Theta_i$ is the ith element of $\mathbf Wh+a$.
 
-**How can this be useful?**
-
-Inference!
-
-given part of $x$, e.g. half of an image, part of dataset, guess rest data.
-
-$p(x_{B}\vert x_{A}) = \sum\limits_hp(x_{B}\vert h)p(h\vert x_{A})$
-
-useful in recommender systems.
+Since all variables $x_i$ are independant from each other, we can do pixel-wise sampling according to probability $p(x_i)\propto \frac{e^{-x_i\Theta_i}}{1+e^{-x_i\Theta_i}}$  (i.e. $p(x_i=0)=\sigma(\Theta_i)$)
 
 **Gibbs sampling:**
 
@@ -79,3 +81,21 @@ $p(x_{t-1}\vert x_{t}) =\sum\limits_{h} p(x_{t-1}\vert h)p(h\vert x_{t})=\sum\li
 Statistic ensemble $\rightarrow$ Time ensemble
 
 2). ergodicity, obvious.
+
+##### Gradient:
+
+$E_\theta(x) = -x^Ta+\sum\limits_j\log(1+e^{(-x^T W+b^T)_j})$
+$$
+\begin{cases}\frac{\partial E\theta(x)}{\partial W{ij}} &= -x_i\sigma((-x^T W-b^T)_j)\\
+
+\frac{\partial E\theta(x)}{\partial b{j}} &= -\sigma((-x^T W-b^T)_j)\\
+
+\frac{\partial E_\theta(x)}{\partial a} &= -x_i^T \end{cases}
+$$
+Remark: usually, we don't need do this gradient stuff by hand, we have [pytorch](https://pytorch.org/) and [tensorflow](https://www.tensorflow.org/)!
+
+## References
+
+Woodford, O. (n.d.). Notes on Contrastive Divergence.
+
+Hinton, G. E., & Salakhutdinov, R. R. (2006). Reducing the Dimensionality of Data with Neural Networks. *Science*, *313*(5786), 504–507. https://doi.org/10.1126/science.1127647
