--- a/_posts/2018-07-09-realnvp.md
+++ b/_posts/2018-07-09-realnvp.md
@@ -26,7 +26,7 @@ $z\sim$ uniform random variable
 
 $$
 \begin{cases}
-x_1 = \sqrt{-2\ln z_1} \cos(2\pi z_2),
+x_1 = \sqrt{-2\ln z_1} \cos(2\pi z_2),\\
 x_2 = \sqrt{-2\ln z_1} \sin(2\pi z_2).
 \end{cases}
 $$
