update circuit grad

--- a/_posts/2018-07-09-realnvp.md
+++ b/_posts/2018-07-09-realnvp.md
@@ -7,41 +7,30 @@ To understand RealNVP, its proper to start from normalizing flow
 
 [https://blog.evjang.com/2018/01/nf1.html](https://blog.evjang.com/2018/01/nf1.html)
 
+## Understand Bijectors
+
 Suppose we have a Bijector $z=f(x)$
 
-#### Inference 
+**Inference** refers to
 
 $x\sim \hat p_X$
 
 $z=f(x)$
 
-#### Generation
+**Generation** referes to
 
 $z\sim p_Z$
 
- $x=f^{-1}(z)$
+$x=f^{-1}(z)$
 
-## Example: Box-Muller Algorithm
-$z\sim$ uniform random variable
-
-$$
-\begin{cases}
-x_1 = \sqrt{-2\ln z_1} \cos(2\pi z_2),\\
-x_2 = \sqrt{-2\ln z_1} \sin(2\pi z_2).
-\end{cases}
-$$
-
-
-## Tractable density
+#### Tractable density
 
 The change of probability
 
 $p_X(x) = p_Z(f(x))\left\vert\det \left(\frac{\partial f(x)}{\partial x^T}\right)\right\vert$
 $\log p_X(x) = \log\left(p_Z\left(f(x)\right)\right) + \log\left(\left\vert\det \left(\frac{\partial f(x)}{\partial x^T}\right)\right\vert\right)$
 
-
-
-#### The detailed derivation
+##### The detailed derivation
 Let $(a, b) = x$ and $(u, v) = z$
 
 Contributed by Shuo-Hui Li
@@ -72,6 +61,22 @@ $$
 p_Z(u,v) = p_X(a,b)\det{\left\vert\rm Jacobian \right\vert}
 $$
 
+
+#### Example: Box-Muller Algorithm
+
+$z_1, z_2\sim\mathcal U(0,1)$ are two uniform random variables
+$$
+\begin{cases}
+x_1 = \sqrt{-2\ln z_1} \cos(2\pi z_2),\\
+x_2 = \sqrt{-2\ln z_1} \sin(2\pi z_2).
+\end{cases}
+$$
+Then, $x_1, x_2$ satisfies  normal distribution.
+
+Try: get the inverse mapping and prove the result.
+
+## RealNVP
+A chain of Bijectors, mapping any distribution to normal distribution.
 $$
 \begin{equation}
 H:(u,v)\rightarrow (a,b) \\
