--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -55,8 +55,8 @@ Thank [Andreas Peter](https://github.com/under-Peter) for helpful discussion.
 
 *references*:
 
-1. https://people.maths.ox.ac.uk/gilesm/files/NA-08-01.pdf 
-2. https://j-towns.github.io/papers/svd-derivative.pdf
+1. [https://people.maths.ox.ac.uk/gilesm/files/NA-08-01.pdf](https://people.maths.ox.ac.uk/gilesm/files/NA-08-01.pdf)
+2. [https://j-towns.github.io/papers/svd-derivative.pdf](https://j-towns.github.io/papers/svd-derivative.pdf)
 
 Complex valued SVD is defined as $A = USV^\dagger$. For simplicity, we consider a **full rank square matrix** $A$.
 Differentiation gives
@@ -170,7 +170,7 @@ rule 1. ${\rm Tr} \left[A(C\circ B\right)] = \sum A^T\circ C\circ B = {\rm Tr} (
 
 rule2. $(C\circ A)^T = C^T \circ A^T$
 
-rule3. When $\mathcal L$ is real, $\frac{\partial \mathcal{L}}{\partial x^*} =  \left(\frac{\partial \mathcal{L}}{\partial x}\right)^*$
+rule3. When $\mathcal L$ is real, $$\frac{\partial \mathcal{L}}{\partial x^*} =  \left(\frac{\partial \mathcal{L}}{\partial x}\right)^*$$
 
 ### How to Test SVD
 
