--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -158,11 +158,17 @@ Similarly, for $V$ we have
 
 $$
 \begin{align}
-\overline A_V &=U^*S(K+K^\dagger)V^T + U^* S^{-1} dV^T (I - VV^\dagger)),
+\overline A_V &=U^*S(K+K^\dagger)V^T + (U S^{-1} dV^T (I - VV^\dagger))^*,
 \end{align}
 $$
 
 where $K=F\circ(V^TdV)$.
+
+To wrap up
+
+$$
+\overline A = \overline A_U + \overline A_S + \overline A_V
+$$
 
 ### Rules
 
