--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -90,7 +90,7 @@ d\mathcal{L} &= {\rm Tr}\left[\overline{A}^TdA+\overline{A^*}^TdA^*\right]\\
 \end{align}
 $$
 
-Easy to show $\overline A_s = U^*\overline SV^T$.
+Easy to show $\overline A_s = U^*\overline SV^T$. Notice here, $\overline A$ is the **derivative** rather than **gradient**, they are different by a conjugate, this is why we have transpose rather than conjugate here. see my [complex valued autodiff blog](https://giggleliu.github.io/2018/02/01/complex_bp.html) for detail.
 
 Using the relations $dC^\dagger+dC=0$ and $dD^\dagger+dD=0$ 
 
@@ -149,7 +149,7 @@ When $U$ is not full rank, this formula should take an extra term (Ref. 2)
 
 $$
 \begin{align}
-\bar A_U &=U^*(J+J^\dagger)SV^T + (VS^{-1}dU^T(I-UU^\dagger))^T
+\bar A_U &=U^*(J+J^\dagger)SV^T + (VS^{-1}\overline U^T(I-UU^\dagger))^T
 \end{align}
 $$
 
@@ -158,17 +158,31 @@ Similarly, for $V$ we have
 
 $$
 \begin{align}
-\overline A_V &=U^*S(K+K^\dagger)V^T + (U S^{-1} dV^T (I - VV^\dagger))^*,
+\overline A_V &=U^*S(K+K^\dagger)V^T + (U S^{-1} \overline V^T (I - VV^\dagger))^*,
 \end{align}
 $$
 
-where $K=F\circ(V^TdV)$.
+where $K=F\circ(V^T\overline V)$.
 
 To wrap up
 
 $$
 \overline A = \overline A_U + \overline A_S + \overline A_V
 $$
+
+This result can be directly used in **autograd**.
+
+For the **gradient** used in training, one should change the convension $\mathcal{\overline A} = \overline A^*, \mathcal{\overline U} = \overline U^*, \mathcal{\overline V}= \overline V^*$.
+
+This convention is used in **tensorflow**, **Zygote.jl**. Which is
+$$
+\begin{align}
+\mathcal{\overline A} =& U(\mathcal{J}+\mathcal{J}^\dagger)SV^\dagger + (I-UU^\dagger)\mathcal{\overline U}S^{-1}V^\dagger\\
+&+ U\overline SV^\dagger\\
+&+US(\mathcal{K}+\mathcal{K}^\dagger)V^\dagger + U S^{-1} \mathcal{\overline V}^\dagger (I - VV^\dagger),
+\end{align}
+$$
+where $J=F\circ(U^\dagger\mathcal{\overline U})$ and $K=F\circ(V^\dagger \mathcal{\overline V})$.
 
 ### Rules
 
