new complex valued eigen and QR decomposition

--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -51,6 +51,20 @@ In conclusion, the `index magic` of exchanging indices as backward rule holds fo
 
 Thank [Andreas Peter](https://github.com/under-Peter) for helpful discussion.
 
+## Symmetric Eigenvalue Decomposition (ED)
+*references*:
+1. [https://arxiv.org/abs/1710.08717](https://arxiv.org/abs/1710.08717)
+
+$$
+A = UEU^\dagger
+$$
+
+We have
+
+$$
+\overline{A} = U\left[\overline{E} + \frac{1}{2}\left(\overline{U}^\dagger U \circ F + h.c.\right)\right]U^\dagger
+$$
+
 ## Singular Value Decomposition (SVD)
 
 *references*:
@@ -215,3 +229,68 @@ function gradient(A)
 end
 ```
 
+
+
+## QR decomposition
+
+$$
+A = QR
+$$
+
+with $Q^\dagger Q = \mathbb{I}$, so that $dQ^\dagger Q+Q^\dagger dQ=0$. $R$ is a complex upper triangular matrix, with diagonal part real.
+$$
+dA = dQR+QdR
+$$
+
+$$
+dQ = dAR^{-1}-QdRR^{-1}
+$$
+
+$$
+\begin{cases}
+Q^\dagger dQ = dC - dRR^{-1}\\
+dQ^\dagger Q =dC^\dagger - R^{-\dagger}dR^\dagger
+\end{cases}
+$$
+
+where $dC=Q^\dagger dAR^{-1}$.
+
+Then
+$$
+dC+dC^\dagger = dRR^{-1} +(dRR^{-1})^\dagger
+$$
+Notice $dR$ is upper triangular and its diag is lower triangular, this restriction gives
+$$
+U\circ(dC+dC^\dagger) = dRR^{-1}
+$$
+where $U$ is a mask operator that its element value is $1$ for upper triangular part, $0.5$ for diagonal part and $0$ for lower triangular part. One should also notice here both $R$ and $dR$ has real diagonal parts, as well as the product $dRR^{-1}$.
+
+Now let's wrap up using the Zygote convension of gradient
+$$
+\begin{align}
+d\mathcal L &= {\rm Tr}\left[\overline{\mathcal{Q}}^\dagger dQ+\overline{\mathcal{R}}^\dagger dR +h.c. \right]\\
+&={\rm Tr}\left[\overline{\mathcal{Q}}^\dagger dA R^{-1}-\overline{\mathcal{Q}}^\dagger QdR
+R^{-1}+\overline{\mathcal{R}}^\dagger dR +h.c. \right]\\
+&={\rm Tr}\left[ R^{-1}\overline{\mathcal{Q}}^\dagger dA+ R^{-1}(-\overline{\mathcal{Q}}^\dagger Q +R\overline{\mathcal{R}}^\dagger) dR +h.c. \right]\\
+&={\rm Tr}\left[ R^{-1}\overline{\mathcal{Q}}^\dagger dA+ R^{-1}M dR +h.c. \right]
+\end{align}
+$$
+here, $M=R\overline{\mathcal{R}}^\dagger-\overline{\mathcal{Q}}^\dagger Q$. Plug in $dR$ we have
+$$
+\begin{align}
+d\mathcal{L}&={\rm Tr}\left[ R^{-1}\overline{\mathcal{Q}}^\dagger dA + M \left[U\circ(dC+dC^\dagger)\right] +h.c. \right]\\
+&={\rm Tr}\left[ R^{-1}\overline{\mathcal{Q}}^\dagger dA + (M\circ L)(dC+dC^\dagger) +h.c. \right]  \;\;\# rule\; 1\\
+&={\rm Tr}\left[ (R^{-1}\overline{\mathcal{Q}}^\dagger dA+h.c.) + (M\circ L)(dC + dC^\dagger)+ (M\circ L)^\dagger (dC + dC^\dagger)\right]\\
+&={\rm Tr}\left[ R^{-1}\overline{\mathcal{Q}}^\dagger dA + (M\circ L+h.c.)dC + h.c.\right]\\
+&={\rm Tr}\left[ R^{-1}\overline{\mathcal{Q}}^\dagger dA + (M\circ L+h.c.)Q^\dagger dAR^{-1}\right]+h.c.\\
+\end{align}
+$$
+where $L =U^\dagger = 1-U​$ is the mask of lower triangular part of a matrix.
+$$
+\begin{align}
+\mathcal{\overline A}^\dagger &= R^{-1}\left[\overline{\mathcal{Q}}^\dagger + (M\circ L+h.c.)Q^\dagger\right]\\
+\mathcal{\overline A} &= \left[\overline{\mathcal{Q}} + Q(M\circ L+h.c.)\right]R^{-\dagger}\\
+&=\left[\overline{\mathcal{Q}} + Q \texttt{copyltu}(M)\right]R^{-\dagger}
+\end{align}
+$$
+Here, the $\texttt{copyltu}​$ takes conjugate when copying elements to upper triangular part.
