--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -65,6 +65,18 @@ $$
 \overline{A} = U\left[\overline{E} + \frac{1}{2}\left(\overline{U}^\dagger U \circ F + h.c.\right)\right]U^\dagger
 $$
 
+Where $F_{ij}=(E_j- E_i)^{-1}$.
+
+If $E$ is continuous, we define the density $\rho(E) = \sum\limits_k \delta(E-E_k)=-\frac{1}{\pi}\int_k \Im[G^r(E, k)] $ (check sign!). Where $G^r(E, k) = \frac{1}{E-E_k+i\delta}$.
+
+We have
+$$
+\overline{A} = U\left[\overline{E} + \frac{1}{2}\left(\overline{U}^\dagger U \circ \Re [G(E_i, E_j)] + h.c.\right)\right]U^\dagger
+$$
+
+
+
+
 ## Singular Value Decomposition (SVD)
 
 *references*:
