fix post coloring

--- a/_posts/2019-06-18-coloring.md
+++ b/_posts/2019-06-18-coloring.md
@@ -101,7 +101,7 @@ Clause $C_1$ 的真值表是
 | 011             | 1     |
 | 111             | 1     |
 
-3-SAT问题的指的是，对于涉及3个变量的多个Clause，有多少个同时（对Clauses求$\and$）为真的case。它的判定版本，即判断一个3-SAT问题有没有解被证明是NP-complete困难的，也就是一般人们认为不存在经典的算法能在多项式时间之内把它求解。而计算出3-SAT解的个数是相对更加困难的问题。考虑下面一个简单的例子：
+3-SAT问题的指的是，对于涉及3个变量的多个Clause，有多少个同时（对Clauses求$\land$）为真的case。它的判定版本，即判断一个3-SAT问题有没有解被证明是NP-complete困难的，也就是一般人们认为不存在经典的算法能在多项式时间之内把它求解。而计算出3-SAT解的个数是相对更加困难的问题。考虑下面一个简单的例子：
 
 $(\lnot x_1 \lor x_2 \lor x_3)\land(\lnot x_2\lor\lnot x_3\lor x_4)\land(x_3\lor x_1\lor x_4)$
 
