--- a/_posts/2019-06-18-coloring.md
+++ b/_posts/2019-06-18-coloring.md
@@ -75,7 +75,18 @@ $$
 
 而这个代表了一种星形的收缩（star-contraction）。
 
-所以当`einsum`不再省略输出指标，我们可以定义更加丰富的运算，这些新引入的规范拓展了**张量网络**，这类记号一般认为与机器学习概率图中的**factor graph** 等价，也在某些文献中被称为**拓展-张量网络**[引文 1]。
+所以当`einsum`不再省略输出指标，我们可以定义更加丰富的运算，比如
+
+```julia
+# trace
+"ii->"
+# matrix multiplication
+"ij,jk->ik"
+# star contraction
+"ij,ik,il->jkl"
+```
+
+这些新引入的规范拓展了**张量网络**，这类记号一般认为与机器学习概率图中的**factor graph** 等价，也在某些文献中被称为**拓展-张量网络**[引文 1]，Andreas Peter也有个不错的[Blog](https://nextjournal.com/under-Peter/julia-summer-of-einsum)是关于这类记号的约定和实现方案。
 
 3-涂色问题中定义的张量网络的拓扑与原图同构，原图的顶角映射成为了一个张量，而边映射成为张量的一个收缩维度。于是我们可以用如下代码求解这个问题
 
@@ -85,7 +96,7 @@ s = map(x->Int(length(unique(x.I)) == 3), CartesianIndices((3,3,3)))
 ein"afl,bhn,cjf,dlh,enj,ago,big,cki,dmk,eom->"(fill(s, 10)...)
 ```
 
-这里我们用了短短两行代码实现了上面的15重循环。上面用到了爱因斯坦求和记号的库叫做[`OMEinsum`](https://github.com/under-Peter/OMEinsum.jl)，是19年的Google Summer of Code项目，作者Andreas Peter有个不错的[Blog](https://nextjournal.com/under-Peter/julia-summer-of-einsum)讲关于它的实现，安装需要在Julia的Pkg模式（在REPL输入`]`进入）输入`pkg> add OMEinsum#master`。
+这里我们用了短短两行代码实现了上面的15重循环。上面用到了爱因斯坦求和记号的库叫做[`OMEinsum`](https://github.com/under-Peter/OMEinsum.jl)，是19年的Google Summer of Code项目，安装需要在Julia的Pkg模式（在REPL输入`]`进入）输入`pkg> add OMEinsum#master`。
 
 一个类似但更加重要的问题叫做3-SAT问题。假设我们有一堆Bool型变量$\{x_1, x_2, \ldots, x_n\}$，我们可以用这些变量作Bool代数构造一些Clause，比如$C_1 := x_1 \land x_2 \lor x_3$。
 Clause $C_1$ 的真值表是
@@ -150,7 +161,7 @@ dLdB = ein"ij,ik->jk"(A, dLdA)
 
 * 注： 这里只考虑了实数，复数版本见下面的blog，需要考虑Wirtingers代数。
 
-从这些例子，大家是否观察到一些特点呢？证明就不放到这里，可以移步到这个[blog](https://giggleliu.github.io/2019/04/02/einsumbp.html)。
+从这些例子，大家是否观察到一些特点呢？爱因斯坦求和的反向传播过程也是一个爱因斯坦求和，只是输入和输出以及它们对应的指标交换而已，证明就不放到这里，有兴趣的读者可以参考这个[blog](https://giggleliu.github.io/2019/04/02/einsumbp.html)。
 
 
 
