fix svd complex valued BP

--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -107,7 +107,7 @@ $$
 dP = dC S + dS + SdD
 $$
 
-where $dCS$ and $SdD$ has zero diagonal elements. So that $dS = {\rm diag}(dP)$.
+where $dCS$ and $SdD$ has zero real part in diagonal elements. So that $dS = \Re[{\rm diag}(dP)]$. (thank [@refraction-ray](https://github.com/tensorflow/tensorflow/issues/13641#issuecomment-526976200) for correction)
 
 $$
 \begin{align}
