update svd, new imaginary contribution

--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -95,7 +95,7 @@ $$
 U^\dagger dA V = U^\dagger dU S + dS + SdV^\dagger V
 $$
 
-Defining matrices $dC=U^\dagger dU$ and $dD = V^\dagger dV$ and $dP = U^\dagger dA V$, then we have
+Defining matrices $dC=U^\dagger dU$ and $dD = dV^\dagger V$ and $dP = U^\dagger dA V$, then we have
 
 $$
 \begin{cases}dC^\dagger+dC=0,\\dD^\dagger +dD=0\end{cases}
@@ -107,7 +107,7 @@ $$
 dP = dC S + dS + SdD
 $$
 
-where $dCS$ and $SdD$ has zero real part in diagonal elements. So that $dS = \Re[{\rm diag}(dP)]$. (thank [@refraction-ray](https://github.com/tensorflow/tensorflow/issues/13641#issuecomment-526976200) for correction)
+where $dCS$ and $SdD$ has zero real part in diagonal elements. So that $dS = \Re[{\rm diag}(dP)]$. 
 
 $$
 \begin{align}
@@ -134,10 +134,11 @@ dD = -F\circ (SdP+dP^\dagger S)
 \end{cases}
 $$
 
-where $F_{ij} = \frac{1}{s_j^2-s_i^2}$, easy to verify $F^T = -F$.
-
-First consider the contribution from $dU$
-
+where $F_{ij} = \frac{1}{s_j^2-s_i^2}$, easy to verify $F^T = -F$. Notice here, the relation between the imaginary diagonal parts  is lost
+$$
+\Im[I\circ dP] = \Im[I\circ(dC+dD)] ~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~\text{Eq. 1}
+$$
+This **the missing diagonal imaginary part** is definitely not trivial, but has been ignored for a long time until [@refraction-ray](https://github.com/tensorflow/tensorflow/issues/13641#issuecomment-526976200) (Shixin Zhang) mentioned as solved it. Let's first focus on the off-diagonal contributions from $dU$
 $$
 d\mathcal L = {\rm Tr}\left[\overline{U}^TdU+h.c. \right]
 $$
@@ -166,46 +167,88 @@ By comparing with $d\mathcal L = {\rm Tr}\left[\overline{A}^TdA+h.c. \right]$, w
 
 $$
 \begin{align}
-\bar A_U &=  \left[VS(J+J^\dagger)^TU^\dagger\right]^T\\
+\bar A_U^{(\rm real)} &=  \left[VS(J+J^\dagger)^TU^\dagger\right]^T\\
 &=U^*(J+J^\dagger)SV^T
 \end{align}
 $$
 
-When $U$ is not full rank, this formula should take an extra term (Ref. 2)
+#### Update: The missing diagonal imaginary part
 
+Now let's inspect the diagonal imaginary parts of $dC$ and $dD$ in Eq. 1. At a first glance, it is not sufficient to derive $dC$ and $dD$ from $dP$, but consider there is still an information not used, **the loss must be gauge invariant**, which means
+$$
+\mathcal{L}(U\Lambda, S, V\Lambda)
+$$
+Should be independent of the choice of gauge $\Lambda$, which is defined as ${\rm diag}(e^\phi, ...)$
 $$
 \begin{align}
-\bar A_U &=U^*(J+J^\dagger)SV^T + (VS^{-1}\overline U^T(I-UU^\dagger))^T
+d\mathcal{L} &={\rm Tr}[ \overline{U\Lambda}^T d(U\Lambda) +\overline  SdS+\overline{V\Lambda}^Td(V\Lambda)] + h.c.\\
+&={\rm Tr}[ \overline {U\Lambda}^T (dU\Lambda+Ud\Lambda) +\overline{S}dS+  \overline{V\Lambda}^T(Vd\Lambda +dV\Lambda)] + h.c.\\
+&= {\rm Tr}[(\overline{U\Lambda}^TU+\overline{V\Lambda}^TV )d\Lambda ] + \ldots + h.c.
+\end{align}
+$$
+Gauge invariance refers to
+$$
+\overline{\Lambda} =  I\circ(\overline{U\Lambda}^TU+\overline{V\Lambda}^TV) = 0
+$$
+For any $\Lambda$, where $I$ refers to the diagonal mask matrix. It is of cause valid when $\Lambda\rightarrow1$, $I\circ(\overline{U}^TU+\overline V^TV) = 0$.
+
+Consider the contribution from the **diagonal imaginary part**, we have
+$$
+\begin{align}
+&{\rm Tr} [\overline U^T U (I \circ \Im [dC])+\overline V^T V (I \circ \Im [dD^\dagger])] + h.c.\\
+&={\rm Tr} [ I \circ (\overline U^T U)\Im [dC]-I\circ (\overline V^T V) \Im [dD]] +h.c. ~~~~~~~~~~~~~~\#  rule 1\\
+&={\rm Tr} [ I \circ (\overline U^T U)(\Im [dC]+ \Im [dD])] \\
+&={\rm Tr}[I\circ (\overline U^T U) \Im[dP]S^{-1}]  \\
+&={\rm Tr}[S^{-1}\Lambda_J U^{\dagger}dA V]\\
+\end{align}
+$$
+where $\Lambda_J  = \Im[I\circ(\overline U^TU)]= \frac 1 2I\circ(\overline U^TU)-h.c.$, with $I$ the mask for diagonal part. Since only the real part contribute to $\delta \mathcal{L}$ (the imaginary part will be canceled by the Hermitian conjugate counterpart), we can safely move $\Im$ from right to left.
+$$
+\begin{align}
+\bar A_{U+V}^{(\rm imag)} &= U^*\Lambda_J S^{-1}V^T
+\end{align}
+$$
+**Thanks  [@refraction-ray](https://github.com/tensorflow/tensorflow/issues/13641#issuecomment-526976200) (Shixin Zhang) for sharing his idea in the first time.  His arXiv preprint is coming out soon.**
+
+
+
+When $U​$ is **not full rank**, this formula should take an extra term (Ref. 2)
+$$
+\begin{align}
+\bar A_U^{(\rm real)} &=U^*(J+J^\dagger)SV^T + (VS^{-1}\overline U^T(I-UU^\dagger))^T
 \end{align}
 $$
 
 
-Similarly, for $V$ we have
+Similarly, for $V​$ we have
 
 $$
 \begin{align}
-\overline A_V &=U^*S(K+K^\dagger)V^T + (U S^{-1} \overline V^T (I - VV^\dagger))^*,
+\overline A_V^{(\rm real)} &=U^*S(K+K^\dagger)V^T + (U S^{-1} \overline V^T (I - VV^\dagger))^*,
 \end{align}
 $$
 
-where $K=F\circ(V^T\overline V)$.
+where $K=F\circ(V^T\overline V)​$.
 
 To wrap up
 
 $$
-\overline A = \overline A_U + \overline A_S + \overline A_V
+\overline A = \overline A_U^{\rm (real)} + \overline A_S + \overline A_V^{\rm (real)} +  \overline A_{U+V}^{\rm (imag)}
 $$
 
 This result can be directly used in **autograd**.
 
-For the **gradient** used in training, one should change the convension $\mathcal{\overline A} = \overline A^*, \mathcal{\overline U} = \overline U^*, \mathcal{\overline V}= \overline V^*$.
-
+For the **gradient** used in training, one should change the convention
+$$
+\mathcal{\overline A} = \overline A^*,\\ \mathcal{\overline U} = \overline U^*,\\ \mathcal{\overline V}= \overline V^*.
+$$
 This convention is used in **tensorflow**, **Zygote.jl**. Which is
 $$
 \begin{align}
 \mathcal{\overline A} =& U(\mathcal{J}+\mathcal{J}^\dagger)SV^\dagger + (I-UU^\dagger)\mathcal{\overline U}S^{-1}V^\dagger\\
 &+ U\overline SV^\dagger\\
-&+US(\mathcal{K}+\mathcal{K}^\dagger)V^\dagger + U S^{-1} \mathcal{\overline V}^\dagger (I - VV^\dagger),
+&+US(\mathcal{K}+\mathcal{K}^\dagger)V^\dagger + U S^{-1} \mathcal{\overline V}^\dagger (I - VV^\dagger)\\
+&+ \frac 1 2 U (I\circ(U^\dagger\overline U)-h.c.)S^{-1}V^\dagger
 \end{align}
 $$
 where $J=F\circ(U^\dagger\mathcal{\overline U})$ and $K=F\circ(V^\dagger \mathcal{\overline V})$.
