--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -140,7 +140,7 @@ $$
 \Im[I\circ dP] = \Im[I\circ(dC+dD)] ~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~\text{Eq. 1}
 $$
 
-This **the missing diagonal imaginary part** is definitely not trivial, but has been ignored for a long time until [@refraction-ray](https://github.com/tensorflow/tensorflow/issues/13641#issuecomment-526976200) (Shixin Zhang) mentioned as solved it. Let's first focus on the off-diagonal contributions from $dU$
+This **the missing diagonal imaginary part** is definitely not trivial, but has been ignored for a long time until [@refraction-ray](https://github.com/tensorflow/tensorflow/issues/13641#issuecomment-526976200) (Shixin Zhang) mentioned and solved it. Let's first focus on the off-diagonal contributions from $dU$
 
 
 $$
