add implementation repos

--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -4,6 +4,8 @@ title: Linear Algebra Autodiff (complex valued)
 ---
 # Linear Algebra Autodiff (complex valued)
 
+You can find the Julia implementations in [BackwardsLinalg.jl](https://github.com/GiggleLiu/BackwardsLinalg.jl) and [OMEinsum.jl](https://github.com/under-Peter/OMEinsum.jl).
+
 ## Einsum
 
 ### Definition of Einsum
@@ -180,7 +182,7 @@ $$
 \mathcal{L}(U\Lambda, S, V\Lambda)
 $$
 
-Should be independent of the choice of gauge $\Lambda$, which is defined as ${\rm diag}(e^\phi, ...)$
+Should be independent of the choice of gauge $\Lambda$, which is defined as ${\rm diag}(e^i\phi, ...)$
 
 $$
 \begin{align}
