--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -85,6 +85,7 @@ $$
 
 1. [https://people.maths.ox.ac.uk/gilesm/files/NA-08-01.pdf](https://people.maths.ox.ac.uk/gilesm/files/NA-08-01.pdf)
 2. [https://j-towns.github.io/papers/svd-derivative.pdf](https://j-towns.github.io/papers/svd-derivative.pdf)
+3. https://arxiv.org/abs/1907.13422
 
 Complex valued SVD is defined as $A = USV^\dagger$. For simplicity, we consider a **full rank square matrix** $A$.
 Differentiation gives
@@ -139,7 +140,7 @@ $$
 where $F_{ij} = \frac{1}{s_j^2-s_i^2}$, easy to verify $F^T = -F$. Notice here, the relation between the imaginary diagonal parts  is lost
 
 $$
-\Im[I\circ dP] = \Im[I\circ(dC+dD)] ~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~\text{Eq. 1}
+\color{red}{\Im[I\circ dP] = \Im[I\circ(dC+dD)]} ~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~\text{Eq. 1}
 $$
 
 This **the missing diagonal imaginary part** is definitely not trivial, but has been ignored for a long time until [@refraction-ray](https://github.com/tensorflow/tensorflow/issues/13641#issuecomment-526976200) (Shixin Zhang) mentioned and solved it. Let's first focus on the off-diagonal contributions from $dU$
@@ -216,15 +217,15 @@ where $\Lambda_J  = \Im[I\circ(\overline U^TU)]= \frac 1 2I\circ(\overline U^TU)
 
 $$
 \begin{align}
-\bar A_{U+V}^{(\rm imag)} &= U^*\Lambda_J S^{-1}V^T
+\color{red}{\bar A_{U+V}^{(\rm imag)} = U^*\Lambda_J S^{-1}V^T}
 \end{align}
 $$
 
-**Thanks  [@refraction-ray](https://github.com/tensorflow/tensorflow/issues/13641#issuecomment-526976200) (Shixin Zhang) for sharing his idea in the first time.  His arXiv preprint is coming out soon.**
+**Thanks  [@refraction-ray](https://github.com/refraction-ray) (Shixin Zhang) for sharing his idea in the first time. This is the [issue for discussion](https://github.com/tensorflow/tensorflow/issues/13641#issuecomment-526976200). His arXiv preprint is coming out soon.**
 
 
 
-When $U​$ is **not full rank**, this formula should take an extra term (Ref. 2)
+When $U$ is **not full rank**, this formula should take an extra term (Ref. 2)
 
 $$
 \begin{align}
@@ -264,7 +265,7 @@ $$
 \mathcal{\overline A} =& U(\mathcal{J}+\mathcal{J}^\dagger)SV^\dagger + (I-UU^\dagger)\mathcal{\overline U}S^{-1}V^\dagger\\
 &+ U\overline SV^\dagger\\
 &+US(\mathcal{K}+\mathcal{K}^\dagger)V^\dagger + U S^{-1} \mathcal{\overline V}^\dagger (I - VV^\dagger)\\
-&+ \frac 1 2 U (I\circ(U^\dagger\overline U)-h.c.)S^{-1}V^\dagger
+&\color{red}{+\frac 1 2 U (I\circ(U^\dagger\overline U)-h.c.)S^{-1}V^\dagger}
 \end{align}
 $$
 
@@ -365,7 +366,7 @@ d\mathcal{L}&={\rm Tr}\left[ R^{-1}\overline{\mathcal{Q}}^\dagger dA + M \left[U
 \end{align}
 $$
 
-where $L =U^\dagger = 1-U​$ is the mask of lower triangular part of a matrix.
+where $L =U^\dagger = 1-U$ is the mask of lower triangular part of a matrix.
 
 $$
 \begin{align}
