add references for QR

--- a/_posts/2019-04-02-einsumbp.md
+++ b/_posts/2019-04-02-einsumbp.md
@@ -306,6 +306,10 @@ end
 
 ## QR decomposition
 
+*references*:
+
+[https://arxiv.org/abs/1710.08717](https://arxiv.org/abs/1710.08717)
+
 $$
 A = QR
 $$
