--- a/posts/2022-12-30-chains.md
+++ b/posts/2022-12-30-chains.md
@@ -34,6 +34,7 @@ $$
 where $H_v = \frac{1}{2}  \sum_{n=0}^\infty |n_v\rangle\langle {n+1}_v| + h.c.$ is a 1D chain model and $H_G$ is the Hamiltonian on a graph.
 In the following, unless specified explicitly, $\sum_v$ stands for $\sum_{v\in V'}$.
 Let us decompose the wave function on the graph into three parts.
+![](/assets/plot/halfchain.png)
 
 $$
 \begin{equation*}\label{eq:threeparts}
