--- a/posts/2022-12-30-chains.md
+++ b/posts/2022-12-30-chains.md
@@ -24,7 +24,6 @@ where $|k\rangle_{1/2} = \sum_{n=0}^{\infty} |n\rangle\langle n|k\rangle$.
 
 ## Graphs with tails
 
-### Results
 Let $G=(V,E)$ be a graph with some of its vertices $V'\subseteq V$ attached to half chains (or tails) and each vertex can be attached to at most one tail. The model Hamiltonian is
 
 $$
@@ -51,10 +50,12 @@ H |\psi\rangle &= H_G |\psi_G\rangle \textcolor{lightgray}{+ H_G\sum_v(|\psi_v\r
 \end{align*}
 $$
 where gray parts are zeroed out.
+
+### Propagating states
 Let us **assume** $|\psi_v\rangle = I_v|-k\rangle + R_v|k\rangle$, we have
 $$a_v = I_v+R_v. \label{eq:av}$$
 By inserting \eqref{eq:chain} to \eqref{eq:hpsi}, we have
-$$
+$$\label{eq:hpsiprop}
 H |\psi\rangle = H_G |\psi_G\rangle + \sum_v \cos(k)|\psi_v\rangle - \left(\frac{I_v}{2}e^{ik} + \frac{R_v}{2}e^{-ik}\right)|0_v\rangle
 $$
 For this ansatz, the eigenvalue of $H$ has to be $E=\cos(k)$. By using \eqref{eq:threeparts} and \eqref{eq:av}
@@ -82,7 +83,7 @@ H_G|\psi_G\rangle = &\cos(k) |\psi\rangle_G-\frac{1}{2}e^{-ik}|0_w\rangle - \sum
 $$
 
 
-### Claim: Equation \eqref{eq:standardform} is a quadratic linear equation
+#### Key point: Equation \eqref{eq:standardform} is a quadratic linear equation
 Let $z = e^{ik}$, we have
 $$\label{eq:standardform}
 \begin{align*}
@@ -93,7 +94,7 @@ $$
 
 where
 $$
-Q = 1 - | 0_v\rangle\langle 0_v |
+Q = 1 - \sum_v| 0_v\rangle\langle 0_v |
 $$
 since 
 $$
@@ -104,3 +105,27 @@ R_v &, v \neq w\\
 $$
 
 Except the $-2$ before $H_G$ due to the difference in convension, \eqref{eq:standardform} is the same as Eq. 12 in Ref. 1.
+
+### Bound states
+There are two types of bound states. The first type with $|\psi\rangle_v = 0$ is trivial.
+In the following, we discuss the second type: $k = i\kappa$ is pure imaginary.
+Let us **assume** $$\label{eq:psibound}|\psi_v\rangle = a_v|\kappa\rangle$$ with $|\kappa\rangle = e^{-\kappa n_v} |n_v\rangle$.
+Following the same derivation from \eqref{eq:hpsiprop} to \eqref{eq:standardform}, we have
+$$
+H |\psi\rangle = H_G |\psi_G\rangle + \sum_v \cosh(\kappa)|\psi_v\rangle - \frac{a_v}{2}e^{\kappa}|0_v\rangle
+$$
+For this ansatz, the eigenvalue of $H$ has to be $E=\cosh(\kappa)$. By using \eqref{eq:threeparts} and \eqref{eq:psibound}
+$$
+\begin{align*}
+&\cosh(\kappa) \left(|\psi_G\rangle \textcolor{lightgray}{+ \sum_v |\psi_v\rangle} - \sum_v a_v|0_v\rangle\right) \\
+= &H_G |\psi_G\rangle \textcolor{lightgray}{+ \sum_v \cosh(\kappa)|\psi_v\rangle} - \sum_v\frac{a_v}{2}e^{\kappa}|0_v\rangle,\\
+&H_G|\psi_G\rangle = \cosh(\kappa) |\psi\rangle_G - \sum_{v}\frac{a_v}{2}e^{-\kappa}|0_v\rangle\\
+\end{align*}
+$$
+
+Let $z_b = e^{-\kappa}$, we have a new quadratic linear equation for the bounded states
+
+$$\label{eq:standardformb}
+(1-2H_Gz_b+Qz_b^2)|\psi_G\rangle = 0
+$$
+
