--- a/modernscientificcomputing/1.julia.md
+++ b/modernscientificcomputing/1.julia.md
@@ -4,7 +4,7 @@
 Scientific computing is a combination of scientific applications, mathematical modeling and high performance computing.
 The first lecture focuses on understanding the performance of our computing devices and the rules that we should follow to get performance from it.
 
-## Computer architecture
+## What limits the computing speed?
 There are three major pieces in the Von-Neuman architecture that widely used in a modern computer, they are processors, memory and I/O peripherals. They are connected by the system bus.
 ![](/assets/arch.png)
 
@@ -17,15 +17,11 @@ A more fundamental reason is speed limitation of information propagation, i.e. t
 
 > Quiz: Given information can not be propagated in a speed faster than the light and the distance between the memory stick and the CPU is 10cm, what is the lower bound of the time loading a data from the memory to a register?
 
+A CPU clock cycle is typically 0.3ns, .
 
-### CPU
-The CPU contains three elements,
-* registers as temporary storage areas for instructions or data,
-* arithmetic/logic unit (ALU) that containing the electronic circuitry that executes all arithmetic and logical operations,
-* control unit that containing circuitry that uses electrical signals to direct the entire computer system to carry out, or execute, stored program instructions.
-A modern CPU may have multiple cores, each instruction must take at least one clock cyles.
 
-You CPU information can be obtained by typing `lscpu`.
+### The computing power of a CPU
+In the linux system, the CPU information can be printed by typing `lscpu`.
 ```bash
 $ lscpu
 Architecture:            x86_64
@@ -97,7 +93,18 @@ The power of a single thread CPU = 2.9 GHz (CPU clock speed, we use the maximum 
 			= 46.4 GFLOPS
 ```
 
-### GPU
+An easy way to check the single/double precision FLOPS is using the matrix multiplication.
+The following code
+```bash
+(base) ➜  ~ OMP_NUM_THREADS=1 julia -e 'using BenchmarkTools; A = randn(Float64, 1000, 1000); B = randn(Float64, 1000, 1000); @btime A * B'
+  417.800 ms (2 allocations: 7.63 MiB)
+(base) ➜  ~ OMP_NUM_THREADS=2 julia -e 'using BenchmarkTools; A = randn(Float64, 1000, 1000); B = randn(Float64, 1000, 1000); @btime A * B'
+  223.983 ms (2 allocations: 7.63 MiB)
+```
+
+It can be shown that the computing power of a single thread is at least $1000^3 \times 2 / 0.04178 \approx 47.9 {\rm GFLOPS}$.
+
+### The computing power of a GPU
 The GPU information of your computer can be obtained using the `nvidia-smi` command.
 
 ### Storage Hierachy
